--- a/doc/source/serve/tutorials/deployment-serve-llm/medium-size-llm/notebook.ipynb
+++ b/doc/source/serve/tutorials/deployment-serve-llm/medium-size-llm/notebook.ipynb
@@ -7,6 +7,11 @@
    "source": [
     "# Deploy a medium-sized LLM\n",
     "\n",
+    "<div align=\"left\">\n",
+    "<a target=\"_blank\" href=\"https://console.anyscale.com/template-preview/deployment-serve-llm?file=%252Ffiles%252Fmedium-size-llm\"><img src=\"https://img.shields.io/badge/🚀 Run_on-Anyscale-9hf\"></a>&nbsp;\n",
+    "<a href=\"https://github.com/ray-project/ray/tree/master/doc/source/serve/tutorials/deployment-serve-llm/medium-size-llm\" role=\"button\"><img src=\"https://img.shields.io/static/v1?label=&amp;message=View%20On%20GitHub&amp;color=586069&amp;logo=github&amp;labelColor=2f363d\"></a>&nbsp;\n",
+    "</div>\n",
+    "\n",
     "A medium LLM typically runs on a single node with 4-8 GPUs. It offers a balance between performance and efficiency. These models provide stronger accuracy and reasoning than small models while remaining more affordable and resource-friendly than very large ones. This makes them a solid choice for production workloads that need good quality at lower cost. They're also ideal for scaling applications where large models would be too slow or expensive.\n",
     "\n",
     "This tutorial deploys a medium-sized LLM using Ray Serve LLM. For smaller models, see [Deploy a small-sized LLM](https://docs.ray.io/en/latest/serve/tutorials/deployment-serve-llm/small-size-llm/README.html), and for larger models, see [Deploy a large-sized LLM](https://docs.ray.io/en/latest/serve/tutorials/deployment-serve-llm/large-size-llm/README.html).\n",
@@ -39,7 +44,7 @@
     "        # Or unsloth/Meta-Llama-3.1-70B-Instruct for an ungated model\n",
     "        model_source=\"meta-llama/Llama-3.1-70B-Instruct\",\n",
     "    ),\n",
-    "    accelerator_type=\"A100-40G\",\n",
+    "    accelerator_type=\"L40S\", # Or \"A100-40G\"\n",
     "    deployment_config=dict(\n",
     "        autoscaling_config=dict(\n",
     "            min_replicas=1,\n",
@@ -156,7 +161,7 @@
     "API_KEY = \"FAKE_KEY\"\n",
     "BASE_URL = \"http://localhost:8000\"\n",
     "\n",
-    "client = OpenAI(BASE_URL=urljoin(BASE_URL, \"v1\"), API_KEY=API_KEY)\n",
+    "client = OpenAI(base_url=urljoin(BASE_URL, \"v1\"), api_key=API_KEY)\n",
     "\n",
     "response = client.chat.completions.create(\n",
     "    model=\"my-llama-3.1-70b\",\n",
@@ -335,9 +340,9 @@
     "\n",
     "Ray Serve LLM uses [vLLM](https://docs.vllm.ai/en/latest/) as its backend engine, which logs the *maximum concurrency* it can support based on your configuration.  \n",
     "\n",
-    "Example log:\n",
+    "Example log for 8xL40S:\n",
     "```console\n",
-    "INFO 08-19 20:57:37 [kv_cache_utils.py:837] Maximum concurrency for 32,768 tokens per request: 13.02x\n",
+    "INFO 08-19 20:57:37 [kv_cache_utils.py:837] Maximum concurrency for 32,768 tokens per request: 17.79x\n",
     "```\n",
     "\n",
     "The following are a few ways to improve concurrency depending on your model and hardware:  \n",
@@ -345,9 +350,9 @@
     "**Reduce `max_model_len`**  \n",
     "Lowering `max_model_len` reduces the memory needed for KV cache.\n",
     "\n",
-    "**Example:** Running Llama-3.1-70&nbsp;B on an A100-40G:\n",
-    "* `max_model_len = 32,768` → concurrency ≈ 13\n",
-    "* `max_model_len = 16,384` → concurrency ≈ 26\n",
+    "**Example:** Running Llama-3.1-70&nbsp;B on 8xL40S:\n",
+    "* `max_model_len = 32,768` → concurrency ≈ 18\n",
+    "* `max_model_len = 16,384` → concurrency ≈ 36\n",
     "\n",
     "**Use Quantized models**  \n",
     "Quantizing your model (for example, to FP8) reduces the model's memory footprint, freeing up memory for more KV cache and enabling more concurrent requests.\n",
@@ -359,8 +364,8 @@
     "Some GPUs provide significantly more room for KV cache and allow for higher concurrency out of the box.\n",
     "\n",
     "**Scale with more replicas**  \n",
-    "In addition to tuning per-GPU concurrency, you can scale *horizontally* by increasing the number of replicas in your config.  \n",
-    "Each replica runs on its own GPU, so raising the replica count increases the total number of concurrent requests your service can handle, especially under sustained or bursty traffic.\n",
+    "In addition to tuning per-replica concurrency, you can scale *horizontally* by increasing the number of replicas in your config.  \n",
+    "Raising the replica count increases the total number of concurrent requests your service can handle, especially under sustained or bursty traffic.\n",
     "```yaml\n",
     "deployment_config:\n",
     "  autoscaling_config:\n",
