--- a/doc/source/serve/tutorials/deployment-serve-llm/small-size-llm/notebook.ipynb
+++ b/doc/source/serve/tutorials/deployment-serve-llm/small-size-llm/notebook.ipynb
@@ -7,6 +7,11 @@
    "source": [
     "# Deploy a small-sized LLM\n",
     "\n",
+    "<div align=\"left\">\n",
+    "<a target=\"_blank\" href=\"https://console.anyscale.com/template-preview/deployment-serve-llm?file=%252Ffiles%252Fsmall-size-llm\"><img src=\"https://img.shields.io/badge/🚀 Run_on-Anyscale-9hf\"></a>&nbsp;\n",
+    "<a href=\"https://github.com/ray-project/ray/tree/master/doc/source/serve/tutorials/deployment-serve-llm/small-size-llm\" role=\"button\"><img src=\"https://img.shields.io/static/v1?label=&amp;message=View%20On%20GitHub&amp;color=586069&amp;logo=github&amp;labelColor=2f363d\"></a>&nbsp;\n",
+    "</div>\n",
+    "\n",
     "A small LLM runs on a single node with 1–2 GPUs, making it fast, inexpensive, and simple to use. It’s ideal for prototyping, lightweight applications, latency-critical use cases, cost-sensitive deployments, and environments with limited resources where efficiency matters more than peak accuracy.\n",
     "\n",
     "\n",
@@ -151,7 +156,7 @@
     "API_KEY = \"FAKE_KEY\"\n",
     "BASE_URL = \"http://localhost:8000\"\n",
     "\n",
-    "client = OpenAI(BASE_URL=urljoin(BASE_URL, \"v1\"), API_KEY=API_KEY)\n",
+    "client = OpenAI(base_url=urljoin(BASE_URL, \"v1\"), api_key=API_KEY)\n",
     "\n",
     "response = client.chat.completions.create(\n",
     "    model=\"my-llama-3.1-8b\",\n",
@@ -359,8 +364,8 @@
     "Some GPUs provide significantly more room for KV cache and allow for higher concurrency out of the box.\n",
     "\n",
     "**Scale with more Replicas**  \n",
-    "In addition to tuning per-GPU concurrency, you can scale *horizontally* by increasing the number of replicas in your config.  \n",
-    "Each replica runs on its own GPU, so raising the replica count increases the total number of concurrent requests your service can handle, especially under sustained or bursty traffic.\n",
+    "In addition to tuning per-replica concurrency, you can scale *horizontally* by increasing the number of replicas in your config.  \n",
+    "Raising the replica count increases the total number of concurrent requests your service can handle, especially under sustained or bursty traffic.\n",
     "```yaml\n",
     "deployment_config:\n",
     "  autoscaling_config:\n",
