--- a/doc/source/serve/tutorials/deployment-serve-llm/reasoning-llm/notebook.ipynb
+++ b/doc/source/serve/tutorials/deployment-serve-llm/reasoning-llm/notebook.ipynb
@@ -7,6 +7,11 @@
    "source": [
     "# Deploy a reasoning LLM\n",
     "\n",
+    "<div align=\"left\">\n",
+    "<a target=\"_blank\" href=\"https://console.anyscale.com/template-preview/deployment-serve-llm?file=%252Ffiles%252Freasoning-llm\"><img src=\"https://img.shields.io/badge/🚀 Run_on-Anyscale-9hf\"></a>&nbsp;\n",
+    "<a href=\"https://github.com/ray-project/ray/tree/master/doc/source/serve/tutorials/deployment-serve-llm/reasoning-llm\" role=\"button\"><img src=\"https://img.shields.io/static/v1?label=&amp;message=View%20On%20GitHub&amp;color=586069&amp;logo=github&amp;labelColor=2f363d\"></a>&nbsp;\n",
+    "</div>\n",
+    "\n",
     "A reasoning LLM handles tasks that require deeper analysis or step-by-step thought. It generates intermediate reasoning before arriving at a final answer, making it better suited for situations where careful logic or structured problem-solving is more important than speed or efficiency.\n",
     "\n",
     "This tutorial deploys a reasoning LLM using Ray Serve LLM.  \n",
@@ -107,8 +112,9 @@
     "        model_id=\"my-qwq-32B\",\n",
     "        model_source=\"Qwen/QwQ-32B\",\n",
     "    ),\n",
-    "    accelerator_type=\"A100-40G\",\n",
+    "    accelerator_type=\"L40S\", # Or \"A100-40G\"\n",
     "    deployment_config=dict(\n",
+    "        # Increase number of replicas for higher throughput/concurrency.\n",
     "        autoscaling_config=dict(\n",
     "            min_replicas=1,\n",
     "            max_replicas=2,\n",
@@ -117,7 +123,8 @@
     "    ### Uncomment if your model is gated and needs your Hugging Face token to access it\n",
     "    # runtime_env=dict(env_vars={\"HF_TOKEN\": os.environ.get(\"HF_TOKEN\")}),\n",
     "    engine_kwargs=dict(\n",
-    "        tensor_parallel_size=8, max_model_len=32768, reasoning_parser=\"deepseek_r1\"\n",
+    "        # 4 GPUs is enough but you can increase tensor_parallel_size to fit larger models.\n",
+    "        tensor_parallel_size=4, max_model_len=32768, reasoning_parser=\"deepseek_r1\"\n",
     "    ),\n",
     ")\n",
     "\n",
@@ -219,7 +226,7 @@
     "API_KEY = \"FAKE_KEY\"\n",
     "BASE_URL = \"http://localhost:8000\"\n",
     "\n",
-    "client = OpenAI(BASE_URL=urljoin(BASE_URL, \"v1\"), API_KEY=API_KEY)\n",
+    "client = OpenAI(base_url=urljoin(BASE_URL, \"v1\"), api_key=API_KEY)\n",
     "\n",
     "response = client.chat.completions.create(\n",
     "    model=\"my-qwq-32B\",\n",
@@ -290,7 +297,7 @@
     "API_KEY = \"FAKE_KEY\"\n",
     "BASE_URL = \"http://localhost:8000\"\n",
     "\n",
-    "client = OpenAI(BASE_URL=urljoin(BASE_URL, \"v1\"), API_KEY=API_KEY)\n",
+    "client = OpenAI(base_url=urljoin(BASE_URL, \"v1\"), api_key=API_KEY)\n",
     "\n",
     "# Example: Complex query with thinking process\n",
     "response = client.chat.completions.create(\n",
